--- a/Crazy Cattle 3D.html
+++ b/Crazy Cattle 3D.html
@@ -924,51 +924,51 @@ footer a:hover {
   <div class="recommendations">
     <h2>You Might Also Like</h2>
     <div class="grid">
-      <a href="Bouncemasters.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
-        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
+      <a href="Bouncy Motors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
+        <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
       </div>
-      <div class="card-title">Bouncemasters</div>
-    </a><a href="Blaze Drifter.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
-        <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
-      </div>
-      <div class="card-title">Blaze Drifter</div>
-    </a><a href="Helix Jump.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
-        <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump" loading="lazy">
-      </div>
-      <div class="card-title">Helix Jump</div>
+      <div class="card-title">Bouncy Motors</div>
     </a><a href="Drift Boss.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
         <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
       </div>
       <div class="card-title">Drift Boss</div>
-    </a><a href="Bouncy Motors.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
-        <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
-      </div>
-      <div class="card-title">Bouncy Motors</div>
-    </a><a href="Highway Racer.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Highway Racer/thumbnail.jpg')">
-        <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer" loading="lazy">
-      </div>
-      <div class="card-title">Highway Racer</div>
     </a><a href="Crazy Cars.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Crazy Cars/thumbnail.jpg')">
         <img class="thumb" src="games/Crazy Cars/thumbnail.jpg" alt="Crazy Cars" loading="lazy">
       </div>
       <div class="card-title">Crazy Cars</div>
-    </a><a href="Hanger 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hanger 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2" loading="lazy">
+    </a><a href="Blaze Drifter.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
+        <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
       </div>
-      <div class="card-title">Hanger 2</div>
+      <div class="card-title">Blaze Drifter</div>
+    </a><a href="Bouncemasters.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
+        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
+      </div>
+      <div class="card-title">Bouncemasters</div>
     </a><a href="Crazy Motorcycle.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
         <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
       </div>
       <div class="card-title">Crazy Motorcycle</div>
+    </a><a href="Helix Jump.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
+        <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump" loading="lazy">
+      </div>
+      <div class="card-title">Helix Jump</div>
+    </a><a href="Highway Racer.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Highway Racer/thumbnail.jpg')">
+        <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer" loading="lazy">
+      </div>
+      <div class="card-title">Highway Racer</div>
+    </a><a href="Hanger 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hanger 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2" loading="lazy">
+      </div>
+      <div class="card-title">Hanger 2</div>
     </a><a href="Escape Road .html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
         <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
@@ -979,41 +979,111 @@ footer a:hover {
         <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
       </div>
       <div class="card-title">Drift Hunters</div>
-    </a><a href="Douchebag Life.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Douchebag Life/thumbnail.jpg')">
-        <img class="thumb" src="games/Douchebag Life/thumbnail.jpg" alt="Douchebag Life" loading="lazy">
+    </a><a href="Doki Doki Literature Club.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
+        <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club" loading="lazy">
       </div>
-      <div class="card-title">Douchebag Life</div>
-    </a><a href="FNAF Sister Location.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF Sister Location/thumbnail.jpg')">
-        <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location" loading="lazy">
+      <div class="card-title">Doki Doki Literature Club</div>
+    </a><a href="Ages of Conflict.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ages of Conflict/thumbnail.png')">
+        <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict" loading="lazy">
       </div>
-      <div class="card-title">FNAF Sister Location</div>
-    </a><a href="Get Yoked.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.jpg')">
-        <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked" loading="lazy">
+      <div class="card-title">Ages of Conflict</div>
+    </a><a href="Clear Vision 4.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 4/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 4/thumbnail.jpg" alt="Clear Vision 4" loading="lazy">
       </div>
-      <div class="card-title">Get Yoked</div>
-    </a><a href="Infinite Craft.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
-        <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft" loading="lazy">
+      <div class="card-title">Clear Vision 4</div>
+    </a><a href="Grindcraft.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Grindcraft/thumbnail.jpg')">
+        <img class="thumb" src="games/Grindcraft/thumbnail.jpg" alt="Grindcraft" loading="lazy">
       </div>
-      <div class="card-title">Infinite Craft</div>
-    </a><a href="Dreader.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
-        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
+      <div class="card-title">Grindcraft</div>
+    </a><a href="The Binding of Isaac - Wrath of the Lamb.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+        <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb" loading="lazy">
       </div>
-      <div class="card-title">Dreader</div>
+      <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
+    </a><a href="1v1.lol.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
+        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
+      </div>
+      <div class="card-title">1v1.lol</div>
+    </a><a href="Deepest Sword.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Deepest Sword/thumbnail.jpg')">
+        <img class="thumb" src="games/Deepest Sword/thumbnail.jpg" alt="Deepest Sword" loading="lazy">
+      </div>
+      <div class="card-title">Deepest Sword</div>
+    </a><a href="Bob The Robber .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber /thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber /thumbnail.jpg" alt="Bob The Robber " loading="lazy">
+      </div>
+      <div class="card-title">Bob The Robber </div>
+    </a><a href="Idle Breakout.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Idle Breakout/thumbnail.png')">
+        <img class="thumb" src="games/Idle Breakout/thumbnail.png" alt="Idle Breakout" loading="lazy">
+      </div>
+      <div class="card-title">Idle Breakout</div>
+    </a><a href="Slope.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
+        <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope" loading="lazy">
+      </div>
+      <div class="card-title">Slope</div>
+    </a><a href="Drive Mad.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drive Mad/thumbnail.png')">
+        <img class="thumb" src="games/Drive Mad/thumbnail.png" alt="Drive Mad" loading="lazy">
+      </div>
+      <div class="card-title">Drive Mad</div>
+    </a><a href="Bad Time Simulator.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
+        <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator" loading="lazy">
+      </div>
+      <div class="card-title">Bad Time Simulator</div>
+    </a><a href="Capybara Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Capybara Clicker/thumbnail.png')">
+        <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker" loading="lazy">
+      </div>
+      <div class="card-title">Capybara Clicker</div>
+    </a><a href="Dead Zed 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
+      </div>
+      <div class="card-title">Dead Zed 2</div>
+    </a><a href="BTD5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
+        <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
+      </div>
+      <div class="card-title">BTD5</div>
+    </a><a href="Burger and Frights.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Burger and Frights/thumbnail.jpg')">
+        <img class="thumb" src="games/Burger and Frights/thumbnail.jpg" alt="Burger and Frights" loading="lazy">
+      </div>
+      <div class="card-title">Burger and Frights</div>
+    </a><a href="Hover Race Drive.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
+        <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive" loading="lazy">
+      </div>
+      <div class="card-title">Hover Race Drive</div>
+    </a><a href="FNAF 3.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 3</div>
     </a><a href="Cookie Clicker.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Cookie Clicker/thumbnail.png')">
         <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker" loading="lazy">
       </div>
       <div class="card-title">Cookie Clicker</div>
-    </a><a href="CS Go Clicker.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/CS Go Clicker/thumbnail.png')">
-        <img class="thumb" src="games/CS Go Clicker/thumbnail.png" alt="CS Go Clicker" loading="lazy">
+    </a><a href="Get Yoked.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.jpg')">
+        <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked" loading="lazy">
       </div>
-      <div class="card-title">CS Go Clicker</div>
+      <div class="card-title">Get Yoked</div>
+    </a><a href="FNAF 4.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 4</div>
     </a><a href="Burrito Bison Launcha Libre.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
         <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre" loading="lazy">
@@ -1024,81 +1094,11 @@ footer a:hover {
         <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game" loading="lazy">
       </div>
       <div class="card-title">Ink Game</div>
-    </a><a href="Effing Worms.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Effing Worms/thumbnail.jpg')">
-        <img class="thumb" src="games/Effing Worms/thumbnail.jpg" alt="Effing Worms" loading="lazy">
+    </a><a href="Dreader.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
+        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
       </div>
-      <div class="card-title">Effing Worms</div>
-    </a><a href="Granny.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
-        <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny" loading="lazy">
-      </div>
-      <div class="card-title">Granny</div>
-    </a><a href="Age Of War.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
-        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
-      </div>
-      <div class="card-title">Age Of War</div>
-    </a><a href="Clear Vision 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
-      </div>
-      <div class="card-title">Clear Vision 2</div>
-    </a><a href="Bob The Robber 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber 5</div>
-    </a><a href="Fruit Ninja.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
-        <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja" loading="lazy">
-      </div>
-      <div class="card-title">Fruit Ninja</div>
-    </a><a href="Drive Mad.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Drive Mad/thumbnail.png')">
-        <img class="thumb" src="games/Drive Mad/thumbnail.png" alt="Drive Mad" loading="lazy">
-      </div>
-      <div class="card-title">Drive Mad</div>
-    </a><a href="Henry Stickmin Stealing The Diamond.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
-        <img class="thumb" src="games/Henry Stickmin Stealing The Diamond/thumbnail.jpg" alt="Henry Stickmin Stealing The Diamond" loading="lazy">
-      </div>
-      <div class="card-title">Henry Stickmin Stealing The Diamond</div>
-    </a><a href="FNAF 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
-      </div>
-      <div class="card-title">FNAF 2</div>
-    </a><a href="Cut the Rope.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Cut the Rope/thumbnail.png')">
-        <img class="thumb" src="games/Cut the Rope/thumbnail.png" alt="Cut the Rope" loading="lazy">
-      </div>
-      <div class="card-title">Cut the Rope</div>
-    </a><a href="Dead Zed 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
-      </div>
-      <div class="card-title">Dead Zed 2</div>
-    </a><a href="FNAF 3.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
-      </div>
-      <div class="card-title">FNAF 3</div>
-    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
-      </div>
-      <div class="card-title">FNAF Pizzeria Simulator</div>
-    </a><a href="Gold Digger FRVR.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Gold Digger FRVR/thumbnail.png')">
-        <img class="thumb" src="games/Gold Digger FRVR/thumbnail.png" alt="Gold Digger FRVR" loading="lazy">
-      </div>
-      <div class="card-title">Gold Digger FRVR</div>
-    </a><a href="Hover Race Drive.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
-        <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive" loading="lazy">
-      </div>
-      <div class="card-title">Hover Race Drive</div>
+      <div class="card-title">Dreader</div>
     </a>
     </div>
   </div>
