--- a/Escape Road .html
+++ b/Escape Road .html
@@ -924,7 +924,27 @@ footer a:hover {
   <div class="recommendations">
     <h2>You Might Also Like</h2>
     <div class="grid">
-      <a href="Drift Boss.html" class="game-card">
+      <a href="Crazy Cars.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cars/thumbnail.jpg')">
+        <img class="thumb" src="games/Crazy Cars/thumbnail.jpg" alt="Crazy Cars" loading="lazy">
+      </div>
+      <div class="card-title">Crazy Cars</div>
+    </a><a href="Drift Hunters.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.jpg')">
+        <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
+      </div>
+      <div class="card-title">Drift Hunters</div>
+    </a><a href="Crazy Cattle 3D.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
+        <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
+      </div>
+      <div class="card-title">Crazy Cattle 3D</div>
+    </a><a href="Crazy Motorcycle.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
+        <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
+      </div>
+      <div class="card-title">Crazy Motorcycle</div>
+    </a><a href="Drift Boss.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
         <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
       </div>
@@ -934,11 +954,6 @@ footer a:hover {
         <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer" loading="lazy">
       </div>
       <div class="card-title">Highway Racer</div>
-    </a><a href="Drift Hunters.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.jpg')">
-        <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
-      </div>
-      <div class="card-title">Drift Hunters</div>
     </a><a href="Blaze Drifter.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
         <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
@@ -949,156 +964,141 @@ footer a:hover {
         <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
       </div>
       <div class="card-title">Bouncy Motors</div>
-    </a><a href="Crazy Motorcycle.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
-        <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
-      </div>
-      <div class="card-title">Crazy Motorcycle</div>
-    </a><a href="Crazy Cattle 3D.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
-        <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
-      </div>
-      <div class="card-title">Crazy Cattle 3D</div>
-    </a><a href="Crazy Cars.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cars/thumbnail.jpg')">
-        <img class="thumb" src="games/Crazy Cars/thumbnail.jpg" alt="Crazy Cars" loading="lazy">
-      </div>
-      <div class="card-title">Crazy Cars</div>
     </a><a href="Crossy Road.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
         <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road" loading="lazy">
       </div>
       <div class="card-title">Crossy Road</div>
-    </a><a href="Gobble.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Gobble/thumbnail.jpg')">
-        <img class="thumb" src="games/Gobble/thumbnail.jpg" alt="Gobble" loading="lazy">
-      </div>
-      <div class="card-title">Gobble</div>
-    </a><a href="Dunk Shot.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
-        <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
-      </div>
-      <div class="card-title">Dunk Shot</div>
-    </a><a href="FNAF 1.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1" loading="lazy">
-      </div>
-      <div class="card-title">FNAF 1</div>
-    </a><a href="1v1.lol.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
-        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
-      </div>
-      <div class="card-title">1v1.lol</div>
-    </a><a href="Slope.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
-        <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope" loading="lazy">
-      </div>
-      <div class="card-title">Slope</div>
-    </a><a href="Douchebag Life.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Douchebag Life/thumbnail.jpg')">
-        <img class="thumb" src="games/Douchebag Life/thumbnail.jpg" alt="Douchebag Life" loading="lazy">
-      </div>
-      <div class="card-title">Douchebag Life</div>
-    </a><a href="Effing Worms.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Effing Worms/thumbnail.jpg')">
-        <img class="thumb" src="games/Effing Worms/thumbnail.jpg" alt="Effing Worms" loading="lazy">
-      </div>
-      <div class="card-title">Effing Worms</div>
-    </a><a href="FNAF 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
-      </div>
-      <div class="card-title">FNAF 2</div>
-    </a><a href="Henry Stickmin Stealing The Diamond.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
-        <img class="thumb" src="games/Henry Stickmin Stealing The Diamond/thumbnail.jpg" alt="Henry Stickmin Stealing The Diamond" loading="lazy">
-      </div>
-      <div class="card-title">Henry Stickmin Stealing The Diamond</div>
-    </a><a href="Fireboy and Watergirl 1.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
-        <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1" loading="lazy">
-      </div>
-      <div class="card-title">Fireboy and Watergirl 1</div>
     </a><a href="10 Minutes Till Dawn.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
         <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
       </div>
       <div class="card-title">10 Minutes Till Dawn</div>
-    </a><a href="BTD5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
-        <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
+    </a><a href="1v1.lol.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
+        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
       </div>
-      <div class="card-title">BTD5</div>
-    </a><a href="FNAF 4.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
+      <div class="card-title">1v1.lol</div>
+    </a><a href="Blackjack.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
+        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
       </div>
-      <div class="card-title">FNAF 4</div>
-    </a><a href="Dead Zed 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
+      <div class="card-title">Blackjack</div>
+    </a><a href="Infinite Craft.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
+        <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft" loading="lazy">
       </div>
-      <div class="card-title">Dead Zed 2</div>
-    </a><a href="Vapmpire Survivors.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
-        <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors" loading="lazy">
+      <div class="card-title">Infinite Craft</div>
+    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
       </div>
-      <div class="card-title">Vapmpire Survivors</div>
-    </a><a href="Bloxorz.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloxorz/thumbnail.png')">
-        <img class="thumb" src="games/Bloxorz/thumbnail.png" alt="Bloxorz" loading="lazy">
+      <div class="card-title">FNAF Pizzeria Simulator</div>
+    </a><a href="Douchebag Life.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Douchebag Life/thumbnail.jpg')">
+        <img class="thumb" src="games/Douchebag Life/thumbnail.jpg" alt="Douchebag Life" loading="lazy">
       </div>
-      <div class="card-title">Bloxorz</div>
-    </a><a href="Elastic Face.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Elastic Face/thumbnail.png')">
-        <img class="thumb" src="games/Elastic Face/thumbnail.png" alt="Elastic Face" loading="lazy">
-      </div>
-      <div class="card-title">Elastic Face</div>
-    </a><a href="Happy Wheels.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
-        <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels" loading="lazy">
-      </div>
-      <div class="card-title">Happy Wheels</div>
-    </a><a href="Extreme Run 3D.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Extreme Run 3D/thumbnail.jpg')">
-        <img class="thumb" src="games/Extreme Run 3D/thumbnail.jpg" alt="Extreme Run 3D" loading="lazy">
-      </div>
-      <div class="card-title">Extreme Run 3D</div>
-    </a><a href="Going Balls.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
-        <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls" loading="lazy">
-      </div>
-      <div class="card-title">Going Balls</div>
+      <div class="card-title">Douchebag Life</div>
     </a><a href="Idle Breakout.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Idle Breakout/thumbnail.png')">
         <img class="thumb" src="games/Idle Breakout/thumbnail.png" alt="Idle Breakout" loading="lazy">
       </div>
       <div class="card-title">Idle Breakout</div>
-    </a><a href="Bloodmoney .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
+    </a><a href="Age Of War.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
+        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
       </div>
-      <div class="card-title">Bloodmoney </div>
-    </a><a href="Basketball FRVR.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Basketball FRVR/thumbnail.jpg')">
-        <img class="thumb" src="games/Basketball FRVR/thumbnail.jpg" alt="Basketball FRVR" loading="lazy">
+      <div class="card-title">Age Of War</div>
+    </a><a href="Bit Planes.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
+        <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes" loading="lazy">
       </div>
-      <div class="card-title">Basketball FRVR</div>
-    </a><a href="Clear Vision 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 5/thumbnail.png')">
-        <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5" loading="lazy">
+      <div class="card-title">Bit Planes</div>
+    </a><a href="Hungry Lamu.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
+        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
       </div>
-      <div class="card-title">Clear Vision 5</div>
+      <div class="card-title">Hungry Lamu</div>
+    </a><a href="Bloxorz.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bloxorz/thumbnail.png')">
+        <img class="thumb" src="games/Bloxorz/thumbnail.png" alt="Bloxorz" loading="lazy">
+      </div>
+      <div class="card-title">Bloxorz</div>
+    </a><a href="Dead Zed 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
+      </div>
+      <div class="card-title">Dead Zed 2</div>
     </a><a href="Deepest Sword.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Deepest Sword/thumbnail.jpg')">
         <img class="thumb" src="games/Deepest Sword/thumbnail.jpg" alt="Deepest Sword" loading="lazy">
       </div>
       <div class="card-title">Deepest Sword</div>
-    </a><a href="Grindcraft.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Grindcraft/thumbnail.jpg')">
-        <img class="thumb" src="games/Grindcraft/thumbnail.jpg" alt="Grindcraft" loading="lazy">
+    </a><a href="Vapmpire Survivors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
+        <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors" loading="lazy">
       </div>
-      <div class="card-title">Grindcraft</div>
+      <div class="card-title">Vapmpire Survivors</div>
+    </a><a href="Dunk Shot.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
+        <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
+      </div>
+      <div class="card-title">Dunk Shot</div>
+    </a><a href="Dreader.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
+        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
+      </div>
+      <div class="card-title">Dreader</div>
+    </a><a href="Capybara Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Capybara Clicker/thumbnail.png')">
+        <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker" loading="lazy">
+      </div>
+      <div class="card-title">Capybara Clicker</div>
+    </a><a href="Ink Game.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
+        <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game" loading="lazy">
+      </div>
+      <div class="card-title">Ink Game</div>
+    </a><a href="Fireboy and Watergirl 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
+        <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1" loading="lazy">
+      </div>
+      <div class="card-title">Fireboy and Watergirl 1</div>
+    </a><a href="Clear Vision 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
+      </div>
+      <div class="card-title">Clear Vision 2</div>
+    </a><a href="Happy Wheels.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
+        <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels" loading="lazy">
+      </div>
+      <div class="card-title">Happy Wheels</div>
+    </a><a href="FNAF Sister Location.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF Sister Location/thumbnail.jpg')">
+        <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location" loading="lazy">
+      </div>
+      <div class="card-title">FNAF Sister Location</div>
+    </a><a href="Baldi’s Basics.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Baldi’s Basics/thumbnail.png')">
+        <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics" loading="lazy">
+      </div>
+      <div class="card-title">Baldi’s Basics</div>
+    </a><a href="Hover Race Drive.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
+        <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive" loading="lazy">
+      </div>
+      <div class="card-title">Hover Race Drive</div>
+    </a><a href="FNAF 3.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 3</div>
+    </a><a href="Going Balls.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
+        <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls" loading="lazy">
+      </div>
+      <div class="card-title">Going Balls</div>
     </a>
     </div>
   </div>
